--- a/Notatnik-app/src/Scss/sidebar.scss
+++ b/Notatnik-app/src/Scss/sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar-section {
-  background-color: rgb(27, 76, 237);
+  background-color: rgb(23, 43, 110);
   width: 400px;
   height: 100vh;
 }
@@ -14,11 +14,62 @@
 
 .sidebar-add-button {
   all: unset;
+  color: gray;
+  font-weight: 500;
   width: 120px;
   height: 40px;
-  background-color: yellow;
+  background: radial-gradient(
+    circle,
+    rgba(63, 251, 95, 1) 10%,
+    rgba(252, 239, 70, 1) 75%,
+    rgba(63, 251, 95, 1) 90%
+  );
   border-radius: 30px;
   text-align: center;
   margin-left: 140px;
   margin-top: 40px;
+  cursor: pointer;
+}
+.sidebar-add-button:hover {
+  color: black;
+  width: 121px;
+  height: 41px;
+  border-left: 3px solid white;
+  border-bottom: 3px solid white;
+}
+.categories-heading {
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
+}
+.sidebar-categories-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  font-size: 20px;
+}
+.categories-list-item {
+  color: white;
+  width: 400px;
+  height: 30px;
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.categories-list-block {
+  display: flex;
+
+  text-align: center;
+  margin-top: 15px;
+  flex-direction: column;
 }
